# codeinfra

./: .envrc.template  .gitignore  .golangci.yml  .goreleaser.yml  CHANGELOG.md  CODE-OF-CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  codecov.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS
.github/scripts/: codeinfra-tap-template.rb  generate-homebrew-tap
.github/workflows/: ci-build-binaries.yml  ci-build-sdks.yml  ci-dev-release.yml  ci-info.yml  ci-lint.yml  ci-performance-gate.yml  ci-prepare-release.yml  (+17 more)
developer-docs/: Makefile  README.md  conf.py  go.mod  index.md
docker/: README.md
docs/: README.md  documentation.md  make.py  writing.md
pkg/: README.md  go.mod  go.sum
proto/: .checksum.txt  README.md  generate.sh
scripts/: brew.sh  codeinfra-version.sh  get-codeinfra-watch.sh  get-job-matrix.py  get-language-providers.sh  get-version  go-test.py  go-update.sh  go-wrapper.sh  normpath  prep-for-goreleaser.sh  publish_npm.sh  retry  reversion.js  set-version.py  tidy.sh  versions.sh
sdk/: README.md  go.mod  go.sum  version.go
sdk/python/cmd/codeinfra-language-python/testdata/toml/sdks/simple-2.0.0/: pyproject.toml
sdk/python/cmd/codeinfra-language-python/testdata/toml/sdks/simple-2.0.0/codeinfra_simple/: _utilities.py  resource.py
sdk/python/cmd/codeinfra-language-python/testdata/toml/sdks/simple-invoke-10.0.0/: pyproject.toml
sdk/python/cmd/codeinfra-language-python/testdata/toml/sdks/simple-invoke-10.0.0/codeinfra_simple_invoke/: _utilities.py  string_resource.py  unit.py
tests/: README.md  about_test.go  config_test.go  go.mod  go.sum  history_test.go  login_test.go  main_test.go  policy_new_test.go  preview_only_test.go  remote_test.go  roundtrip_test.go  smoke_test.go  stack_test.go
tests/testdata/codegen/kubernetes20/python/: codegen-manifest.json  pyproject.toml
tests/testdata/codegen/kubernetes20/python/codeinfra_kubernetes/: README.md  __init__.py  _inputs.py  provider.py
tests/testdata/codegen/kubernetes20/python/codeinfra_kubernetes/core/: __init__.py
tests/testdata/codegen/kubernetes20/python/codeinfra_kubernetes/core/v1/: ConfigMap.py  ConfigMapList.py  _inputs.py  outputs.py
tests/testdata/codegen/kubernetes20/python/codeinfra_kubernetes/helm/: __init__.py
tests/testdata/codegen/kubernetes20/python/codeinfra_kubernetes/helm/v3/: Release.py
tests/testdata/codegen/kubernetes20/python/codeinfra_kubernetes/meta/: __init__.py
tests/testdata/codegen/kubernetes20/python/codeinfra_kubernetes/meta/v1/: _inputs.py  outputs.py
tests/testdata/codegen/kubernetes20/python/codeinfra_kubernetes/yaml/: __init__.py
tests/testdata/codegen/kubernetes20/python/codeinfra_kubernetes/yaml/v2/: ConfigGroup.py
tests/testdata/codegen/simple-schema-pyproject/python/: codegen-manifest.json  pyproject.toml
tests/testdata/codegen/simple-schema-pyproject/python/codeinfra_example/: __init__.py
(+7595 files in other folders)
