[project]
  name = "codeinfra_example"
  description = "This is a test package for pyproject.toml"
  dependencies = ["parver>=0.2.1", "codeinfra>=3.142.0,<4.0.0", "semver>=2.8.1", "typing-extensions>=4.11; python_version < \"3.11\""]
  keywords = ["Testing", "Codeinfrapus"]
  readme = "README.md"
  requires-python = ">=3.9"
  version = "0.0.1"
  [project.license]
    text = "MIT"
  [project.urls]
    Homepage = "https://codeinfra.com"
    Repository = "https://github.com/khulnasoft/codeinfra"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      codeinfra_example = ["py.typed", "codeinfra-plugin.json"]
