[project]
  name = "codeinfra_simple_invoke"
  dependencies = ["parver>=0.2.1", "codeinfra>=3.142.0,<4.0.0", "semver>=2.8.1", "typing-extensions>=4.11; python_version < \"3.11\""]
  readme = "README.md"
  requires-python = ">=3.9"
  version = "10.0.0"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      codeinfra_simple_invoke = ["py.typed", "codeinfra-plugin.json"]
